# eduLLM

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
edullm/inputs/: importer.py
edullm/llm/: edu_llm.py
edullm/llm/llm/: llm.py  prompt.py
edullm/llm/llm/llamacpp/: llama_cpp_python.py
edullm/llm/llm/llamaindex/: llamaindex.py
edullm/llm/llm/ollama/: o_llama.py
edullm/llm/rag/: embedding.py  rag_pipeline.py  vector_database.py
edullm/llm/rag/db/test/: default__vector_store.json  docstore.json  index_store.json
edullm/ui/: ui.py
