[tool.poetry]
name = "edullm"
version = "0.0.1"
description = "Educational LLM that helps you understand things"
authors = ["jeremyf <jerem.forest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
