[tool.poetry]
name = "edullm"
version = "0.0.1"
description = "Educational LLM that helps you understand things"
authors = ["jeremyf <jerem.forest@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
ollama = ">=0.1.6"
llama-index = ">=0.10"
transformers = ">=4.37.2"
optimum = ">=1.16.2"
torch = {version = ">=2.1.1+cpu", source = "pytorch"}
torchvision = {version = ">=0.16.1+cpu", source = "pytorch"}
onnxruntime = ">=1.17.0"
onnx = ">=1.15.0"
sentence-transformers = ">=2.3.1"
langchain = ">=0.1.6"
llama-cpp-python = ">=0.2.39"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-llms-llama-cpp = "^0.1.3"
nbconvert = "^7.16.3"
ipython = "^8.23.0"
llama-index-llms-ollama = "^0.1.2"
streamlit = "^1.33.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
